# scandale

./: .editorconfig  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-doc.txt  scandale.py  scandale_cli.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: pythonapp.yml
api/: crud.py  database.py  main.py  models.py  schemas.py
contrib/: openapi.py  test-websocket.py
docs/: architecture.rst  command-line-interface.rst  conf.py  deployment.rst  formats.rst  index.rst  installation.rst  references.rst  refs.bib  requirements.txt
docs/_static/: openapi.json  openapi.yaml
docs/_static/js/: mermaid.min.js
instance/: example.py
paper/: README.md  bibliography.bib  paper.md
pumpkin/: __about__.py  __init__.py  aggregation.py  correlation.py  probe-agent.config.json  probe.py
scandale/: __about__.py  __init__.py  aggregation.py  probe-agent.config.json  probe.py  utils.py
