[tool.poetry]
name = "scandale"
version = "0.2.0"
description = "A data collection platform."
authors = [
    "Cédric Bonhomme <cedric@cedricbonhomme.org>"
]
license = "AGPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/scandale-project/scandale"
repository = "https://github.com/scandale-project/scandale"
documentation = "https://scandale.readthedocs.io"

keywords = ["spade", "multiagent-systems", "xmpp"]

[tool.poetry.dependencies]
python = "^3.10"
spade = "^3.3.2"
fastapi = "^0.109.1"
pydantic = "^2.5.2"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.23"
rfc3161ng = "^2.1.3"
fastapi-websocket-pubsub = "^0.3.8"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
flake8 = "^5.0.4"
reorder-python-imports = "^3.9.0"
pre-commit = "^2.20.0"
black = "^22.10.0"
pyupgrade = "^3.2.0"
autoflake = "^1.7.7"
install = "^1.3.5"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx-book-theme = "^1.1.0"
sphinx-multiversion = "^0.2.4"
sphinx-autodoc-typehints = "^1.25.2"
sphinxcontrib-mermaid = "^0.9.2"
sphinxcontrib-bibtex = "^2.6.2"
sphinxcontrib-openapi = "^0.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


keywords = ["monitoring", "security", "multiagent-systems", "xmpp"]

classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Security",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

show_error_context = true
pretty = true

exclude = "build|dist|docs"


[tool.isort]
profile = "black"
